--- a/styles.css
+++ b/styles.css
@@ -40,20 +40,88 @@
     justify-content: center;
     display: none;
 }
-@media only screen and (max-width: 600px){
-    .navbar__menu_container .link {
-        display: none;  
-    }
-    .navbar{
-        padding: 16px;
-    }
-    .hero_section{
-        min-height: 80vh;
-    }
-    .user__icon{
-        display: flex;
-        
-    }
-    
+
+.hero_section_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height:calc(60vh - 60px);
+    gap: 32px;
 }
 
+.hero_section_logo{
+    width: 300px;
+    height: auto;
+}
+
+.hero_section_title{
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.hero_section_input_container{
+    background: white;
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+}
+
+.input_container_location,
+.input_container_search{
+    padding: 5px;
+    border: none;
+    outline: none;
+}
+ 
+.input_container_search{
+    width: 70%; 
+}
+.input_container_location{
+    width: 30%;
+    border-right: 2px solid #e0e0e0 ;
+}
+
+@media only screen and (max-width: 600px){
+    .navbar__menu_container .link{
+        display: none;
+    }
+ .user__icon{
+    display: flex;
+ }
+
+ .navbar {
+    padding: 16px;
+ }
+
+ .hero_section{
+    min-height: 80vh;
+ }
+
+ .hero_section_input_container{
+    flex-direction: column;
+    background-color: transparent;
+    width: 100%;
+ }
+
+ .input_container_location,
+ .input_container_search{
+    padding: 15px;
+    border: none;
+    border:none;
+    border-radius: 10px;
+    width: 80%;
+ }
+ .hero_section_container{
+    height: calc(80vh - 60px);
+ }
+ .input_container_location{
+    border-right: none;
+ }
+ 
+}
